# ocean-jobs

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  Makefile  main.py  requirements.txt
backend/tests/: test.py
config/: .env.example
development/: Web_Scraper.ipynb  requirements.txt
docs/: .gitrepo  Environment.md  Home.md  mkdocs.yml
docs/src/: index.md
examples/: Makefile
frontend/: .gitrepo  __init__.py
frontend/tests/: __init__.py
notebooks/data/: 00-ts-totaljobs-spider.ipynb  01-vk-totaljobs-parser.ipynb  Spider.ipynb
notebooks/visualisations/: 00-vk-visualise-totaljobs.ipynb
notebooks/visualise/: 00-vk-visualise-totaljobs.ipynb
scripts/: build.sh  clear-notebook-outputs.sh  clear-outputs.sh  deploy.sh  init.sh  package.sh  print-env.sh  release.sh
src/: requirements-dev.txt  requirements.txt  setup.py
src/ocean_jobs/: lambda_function.py  main.py  status.py
src/ocean_jobs/data/: __init__.py  crawl_totaljobs.py  data.py
src/ocean_jobs/data/spiders/: totaljobs.py
src/ocean_jobs/features/: __init__.py
src/ocean_jobs/modelling/: __init__.py
src/ocean_jobs/utils/: __init__.py  logger.py  mock.py  status.py
src/ocean_jobs/visualisations/: __init__.py  views.py
src/ocean_jobs/visualisations/templates/: _layout.html  _nav.html  apply.html  index.html  search.html  totaljobs.html
src/ocean_jobs/visualise/: __init__.py  views.py
tests/: event.json  test_backend.py  test_lambda_function.py
(+4 files in other folders)
