[tool.poetry]
name = "ocean-jobs"
version = "0.1.0"
description = ""
authors = ["Vikash Kothary <kothary.vikash@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
python-dotenv = "^0.13.0"


[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
flake8 = "^3.8.3"
jupyterlab = "^2.1.4"
nbstripout = "^0.3.8"
scrapy = "^2.1.0"
beautifulsoup4 = "^4.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
