[tool.poetry]
name = "ocean-jobs"
version = "0.1.0"
description = ""
authors = ["Vikash Kothary <kothary.vikash@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.13.0"
flake8 = "^3.8.3"
jupyter = "^1.0.0"
jupyterlab = "^2.1.4"
nbstripout = "^0.3.8"
scrapy = "^2.1.0"
beautifulsoup4 = "^4.9.1"
pandas = "^1.0.5"
mkdocs = "^1.1.2"
pytest = "^5.4.3"
jsonpickle = "^1.4.1"
aws-xray-sdk = "^2.6.0"
toml = "^0.10.1"
boto3 = "^1.14.28"
black = "^19.10b0"
isort = "^5.2.1"
pre-commit = "^2.6.0"

[tool.black]
line-length = 100

[tool.isort]
known_first_party = ["ocean_jobs"]
known_third_party = ["aws_xray_sdk", "boto3", "bs4", "flask", "jsonpickle", "pandas", "scrapy", "toml"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
